menyambungkan form ke google sheet

--- a/index.html
+++ b/index.html
@@ -378,36 +378,35 @@
               </div>
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3973.7174015573373!2d119.4405511!3d-5.1491146!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dbee3a089c44c21%3A0xf6942b0e2ffadd16!2sRumah%20Pengantin%20Anisah%20Makassar!5e0!3m2!1sid!2sid!4v1673338697150!5m2!1sid!2sid" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
             </div>
-
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-              <div class="row">
-                <div class="form-group col-md-6">
-                  <label for="name">Nama Anda</label>
-                  <input type="text" name="name" class="form-control" id="name" required>
+            <form class="php-email-form" name="kontak-form">
+              <div class="alert alert-success alert-dismissible fade show d-none btn-alert" role="alert">
+                <strong>Terima Kasih!</strong> Pesan Anda Sudah Kami Terima.
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+              </div>
+              <div class="row mt-5">
+                <div class="col-md-6 form-group">
+                  <input type="text" name="nama" class="form-control" id="name" placeholder="Nama Anda" required />
                 </div>
-                <div class="form-group col-md-6 mt-3 mt-md-0">
-                  <label for="name">Email Anda</label>
-                  <input type="email" class="form-control" name="email" id="email" required>
+                <div class="col-md-6 form-group mt-3 mt-md-0">
+                  <input type="email" class="form-control" name="email" id="email" placeholder="Email Anda" required />
                 </div>
               </div>
               <div class="form-group mt-3">
-                <label for="name">Subject</label>
-                <input type="text" class="form-control" name="subject" id="subject" required>
+                <textarea class="form-control" name="pesan" rows="3" placeholder="Pesan" required></textarea>
               </div>
-              <div class="form-group mt-3">
-                <label for="name">Pesan</label>
-                <textarea class="form-control" name="message" rows="10" required></textarea>
+              <div class="my-3"></div>
+              <div class="text-center">
+                <button class="btn-kirim" type="submit">Kirim Pesan</button>
+                <button class="d-none btn-loading" style="background: #16df7e; border: 0; padding: 10px 24px; color: #fff; transition: 0.4s; border-radius: 4px" type="button" disabled>
+                  <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                  Loading...
+                </button>
               </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Kirim pesan</button></div>
             </form>
+
           </div>
 
         </div>
@@ -437,6 +436,8 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
+
+  <script src="forms/form.js"></script>
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
