perbaiki color botton dan hero image

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/logo.png" rel="icon">
+  <link href="assets/img/logo.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -91,7 +91,7 @@
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img">
-          <img src="assets/img/gambar.png" class="img-fluid animated" alt="">
+          <img src="assets/img/hero.png" class="img-fluid animated" alt="">
         </div>
       </div>
     </div>
@@ -338,7 +338,7 @@
       <div class="container">
 
         <div class="text-center">
-          <h3>Call To Action</h3>
+          <h3>Buat Reservasi Sekarang</h3>
           <p>Wujudkan impian pernikahan Muslimah Anda dengan Rumah Pengantin Anisah. Klik di sini untuk menemukan berbagai layanan make up pengantin, penyewaan peralatan pernikahan dan gaun pengantin yang indah.</p>
           <a class="cta-btn" href="https://wa.me/6282344562345">Hubungi sekarang!</a>
         </div>
