ubah warna hover buttom dan link

--- a/index.html
+++ b/index.html
@@ -216,9 +216,9 @@
       <div class="container">
 
         <div class="section-title">
-          <span>Portfolio</span>
-          <h2>Portfolio</h2>
-          <p>Portfolio kami adalah bukti kualitas layanan kami dan hasil karya yang telah kami kerjakan. Dari make up pengantin, hias, hingga busana pengantin, kami menyediakan hasil yang indah dan sesuai dengan keinginan klien. Kami siap untuk membuat hari spesial Anda menjadi kenangan yang tak terlupakan.</p>
+          <span>Galeri</span>
+          <h2>Galeri</h2>
+          <p>Galeri kami adalah bukti kualitas layanan kami dan hasil karya yang telah kami kerjakan. Dari make up pengantin, hias, hingga busana pengantin, kami menyediakan hasil yang indah dan sesuai dengan keinginan klien. Kami siap untuk membuat hari spesial Anda menjadi kenangan yang tak terlupakan.</p>
         </div>
 
         <div class="row">
@@ -428,7 +428,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/enno-free-simple-bootstrap-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">Pondok Informatika</a>
+        Designed by <a style="color: #444444;" href="https://bootstrapmade.com/">Pondok Informatika</a>
       </div>
     </div>
   </footer><!-- End Footer -->
